--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
 
 <body>
 
-<header>
-My fancy header
-</header>
-
 <img src="images/octocat.png" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-
+<p>Hello World! I’m claire-white. This is my website!</p>
 
 </body>
 </html>
