--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 
 <body>
 
+  <h1>My First Website on Github</h1>
+
 <img src="images/octocat.png" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Hello World! I’m claire-white. This is my website!</p>
+
+<p>Trying to work out how to use github?</p>
 
 </body>
 </html>
